MP2-53 Fix table spacing and name length of user in registration form

--- a/ems-ui/src/app/common/components/table/table.component.scss
+++ b/ems-ui/src/app/common/components/table/table.component.scss
@@ -6,6 +6,10 @@ table {
     border-bottom-width: 10px;
   }
 
+  td {
+    padding-right: 0.75rem;
+  }
+
   .clickable-table-row{
     cursor: pointer;
   }
